# portage-utils

./:   .cvsignore  .depend  .gitignore  .travis.yml  HACKING  HACKING.md  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  TODO.md  applets.h  applets.sh  autogen.sh  compile_commands.json  config.h  config.h.in  configure  configure.ac  cvsignore-to-gitignore.sh  gtree-format.md  include_applets.h  main.c  main.h  make-tarball.sh  porting.h  q.c  qatom.c  qcache.c  qcheck.c  qdepends.c  qfile.c  qglsa.c  qgrep.c  qimlate.c  qkeyword.c  qlist.c  (+14 more)
.github/workflows/: build-test-ci.yml
autotools/gnulib/: Makefile.am  Makefile.in  byteswap.h  dirent.h  error.h  fcntl.h  getopt-cdefs.h  getopt.h  inttypes.h  limits.h  math.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  strncat.c  time.h  unistd.h  utime.h  wchar.h
autotools/m4/: ac_check_sendfile.m4  gnulib-cache.m4  gnulib-comp.m4  libtool.m4
libq/: Makefile  Makefile.am  Makefile.in  array.c  array.h  atom.c  atom.h  atom_compare.c  atom_explode.c  basename.c  basename.h  busybox.h  cache.c  cache.h  colors.c  colors.h  compat.c  contents.c  contents.h  copy_file.c  copy_file.h  cur_sys_pkg.c  cur_sys_pkg.h  dep.c  dep.h  eat_file.c  eat_file.h  file_magic.c  file_magic.h  hash.c  hash.h  hash_fd.c  hash_fd.h  hash_md5_sha1.c  hash_md5_sha1.h  human_readable.c  human_readable.h  i18n.h  libq.c  libq.h  (+42 more)
man/: mkman.py  mkman.sh  q.1  qatom.1  qcache.1  qcheck.1  qdepends.1  qfile.1  qgrep.1  qimlate.1  qkeyword.1  qlist.1  qlop.1  qmanifest.1  qmerge.1  qpkg.1  qsearch.1  qsize.1  qtbz2.1  qtegrity.1  quse.1  qwhich.1  qxpak.1
man/include/: q-01-colours.include  q.desc  q.optdesc.yaml  qatom-01-antislot.include  qatom.desc  qatom.optdesc.yaml  qcheck.optdesc.yaml  qdepends-05-examples.include  qdepends.desc  qdepends.optdesc.yaml  qfile-01-owners.include  qfile-02-orphans.include  (+36 more)
mod/: Makefile  hello.c  py.c
tests/: Makefile  Makefile.am  Makefile.in  init.sh  init.sh.in  subdir.mk  tests.h
tests/atom_compare/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  atom-compare.py  static.good  static.q.good  static.q.tests  static.tests
tests/atom_explode/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  atom-explode.py  basic.good  basic.tests  dotest  ebuildlist.xz  portageatoms.xz  test.c
tests/copy_file/: Makefile  Makefile.am  Makefile.in  dotest  test.c
tests/install/: Makefile  Makefile.am  Makefile.in  dotest
tests/mkdir/: Makefile  Makefile.am  Makefile.in  dotest  test.c
tests/profile/: Makefile  Makefile.am  Makefile.in  dotest
tests/profile/profile1/etc/: parent.conf
tests/profile/profile1/etc/portage/: make.conf  this.level.conf
tests/profile/profile1/etc/portage/subdir/: file.conf
tests/qatom/: Makefile  Makefile.am  Makefile.in  dotest
tests/qcheck/: Makefile  Makefile.am  Makefile.in  dotest  list01.good  list02.good  list03.good  list04.good  list05.good  list06.good  list07.good  list08.good  list09.good
tests/qcheck/root/a-b/pkg-1.0/: CONTENTS
tests/qdepends/: Makefile  Makefile.am  Makefile.in  dotest  list01.good  list02.good  list03.good  list04.good  list05.good  list06.good  list07.good  list08.good  list09.good  list10.good  list11.good
tests/qdepends/root/app-arch/cpio-2.11/: CONTENTS
tests/qdepends/root/x11-apps/xdm-1.1.11-r3/: DEPEND  RDEPEND  USE
tests/qfile/: Makefile  Makefile.am  Makefile.in  dotest  test.sh
tests/qfile/root/app-shells/bash-4.4_p23-r1/: BUILD_TIME  CATEGORY  CFLAGS  CONTENTS  DEFINED_PHASES  DEPEND  DESCRIPTION  FEATURES  HOMEPAGE  INHERITED  IUSE  IUSE_EFFECTIVE  KEYWORDS  LDFLAGS  LICENSE  NEEDED  NEEDED.ELF.2  PF  RDEPEND  REQUIRES  SIZE  USE
tests/qlist/: Makefile  Makefile.am  Makefile.in  dotest  list01.good  list03.good  list04.good  list05.good  list06.good  list07.good  list08.good  list09.good  list10.good  list11.good  list12.good  list13.good  list14.good  list16.good  list17.good
tests/qlist/root/a-b/a-0/: SLOT
tests/qlist/root/a-b/b-0/: SLOT
tests/qlist/root/cat/sub-2/: SLOT
tests/qlist/root/sys-fs/mtools-4.0.13/: CONTENTS  IUSE  USE
tests/qlop/: Makefile  Makefile.am  Makefile.in  dotest  list01.good  list02.good  list03.good  list05.good  list07.good  list08.good  list09.good  list10.good
tests/qmanifest/: Makefile.am  Makefile.in  dotest  key.gpg  manifest00.good  manifest01.good  manifest02.good  manifest03.good  manifest04.good  manifest05.good  manifest07.good  manifestp6.good
tests/qmanifest/root/.gnupg/: pubring.kbx  random_seed  trustdb.gpg
tests/qmanifest/root/.gnupg/private-keys-v1.d/: 1F0A2C7F1E80A6EEEA3B9C30068FB3349702B3A7.key  E37F9F3C8E4A940C625EC65B7070255F4AAA55F9.key
tests/qmanifest/root/etc/portage/repos.conf/: qtest.conf
tests/qmanifest/root/simpletree/: Manifest
tests/qmanifest/root/simpletree/metadata/: layout.conf
tests/qmanifest/root/simpletree/my-cat/mypackage/: Manifest  metadata.xml  mypackage-0.ebuild  mypackage-1.ebuild  mypackage-2.ebuild
tests/qmerge/: .gdb_history  Makefile  Makefile.am  Makefile.in  dotest
tests/qmerge/q-tmp/qmerge/sys-devel/qmerge-test-1.3/image/etc/: another.conf
tests/qmerge/q-tmp/qmerge/sys-devel/qmerge-test-1.3/temp/: environment
tests/qmerge/q-tmp/qmerge/sys-devel/qmerge-test-1.3/vdb/: BUILD_TIME  CATEGORY  CFLAGS  CXXFLAGS  DEFINED_PHASES  DESCRIPTION  FEATURES  HOMEPAGE  KEYWORDS  LDFLAGS  PF  USE  environment.bz2  qmerge-test-1.3.ebuild
tests/qtbz2/: Makefile  Makefile.am  Makefile.in  dotest
tests/quse/: Makefile  Makefile.am  Makefile.in  dotest  list01.good
tests/quse/portdir/profiles/: arch.list  use.desc  use.local.desc
tests/quse/portdir/profiles/desc/: elibc.desc  one.desc  two.desc
tests/qxpak/: Makefile  Makefile.am  Makefile.in  dotest  list01.good  list02.good
tests/reinitialize/: Makefile  Makefile.am  Makefile.in  dotest
tests/rmspace/: Makefile  Makefile.am  Makefile.in  dotest  test.c
tests/source/: Makefile  Makefile.am  Makefile.in  dotest
tests/valgrind-wrapper/: qvalgrind  valgrind.ignore
travis/: install-blake2.sh  install-iniparser.sh  main.sh
(+208 files in other folders)
